# cloth_sim_self_collision

./: .gitmodules  aabb.h  bvh_aabb.cpp  bvh_aabb.h  cloth_internal_physics.h  ilu_sparse.cpp  ilu_sparse.h  jagged_array.h  matrix_square_sparse.cpp  matrix_square_sparse.h  readme.md  readme.txt  self_collision_cloth.cpp  self_collision_cloth.h  solve_internal_eigen.h  solve_internal_sparse.h  utility.h  vector3d.h
internal_cloth_eigen/: CMakeLists.txt  Makefile  internal_cloth_eigen.sln  internal_cloth_eigen.vcxproj  main.cpp
internal_cloth_eigen/internal_cloth_eigen.xcodeproj/: project.pbxproj
internal_cloth_eigen/internal_cloth_eigen.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
internal_cloth_sparse/: CMakeLists.txt  Makefile  internal_cloth_sparse.sln  internal_cloth_sparse.vcxproj  main.cpp
internal_cloth_sparse/internal_cloth_sparse.xcodeproj/: project.pbxproj
internal_cloth_sparse/internal_cloth_sparse.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
internal_cloth_sparse/internal_cloth_sparse.xcodeproj/project.xcworkspace/xcuserdata/nobuyuki.xcuserdatad/: UserInterfaceState.xcuserstate
self_contact_eigen/: CMakeLists.txt  Makefile  main.cpp  self_contact_eigen.sln  self_contact_eigen.vcxproj
self_contact_eigen/self_contact_eigen.xcodeproj/: project.pbxproj
self_contact_sparse/: CMakeLists.txt  Makefile  main.cpp  self_contact_sparse.sln  self_contact_sparse.vcxproj
self_contact_sparse/self_contact_sparse.xcodeproj/: project.pbxproj
(+2 files in other folders)
